apps/octra/src/app/core/component/transcr-overview/transcr-overview.component.css
.red {
  background-color: var(--octra-waveform-background);
}

.segment-number {
  padding: 3px;
  width: 50px;
  vertical-align: middle;
}

.segment-number .btn-link,
.segment-number .btn-link:hover,
.segment-number .btn-link:focus,
.segment-number .btn-link:active {
  color: #73a790;
}

.segment-warning {
  color: #f0581a;
}

.segment-transcript {
  vertical-align: middle;
  cursor: pointer;
}

.segment-transcript {
}

.found-errors {
  padding: 5px;
  display: block;
  text-align: center;
}

#statistics td {
  text-align: center;
}

.table thead th {
  text-align: center;
  vertical-align: middle;
}

.table .last-column {
  text-align: center;
  vertical-align: middle;
  width: 100px;
}

.last-column .btn-link,
.last-column .btn-link:hover,
.last-column .btn-link:focus,
.last-column .btn-link:active {
  color: #73a790;
}

.table fa-icon {
  cursor: pointer;
}

#skip-silence-checkbox {
  margin-left: 5px;
  display: inline-flex;
  margin-right: 3px;
}

.ripple-container {
  display: none;
}

.bg-danger {
  background-color: var(--octra-waveform-background) !important;
  border: 1px solid var(--octra-accent-error) !important;
  color: black !important;
}

.bg-info {
  background-color: #8b8fae !important;
  border: 1px solid var(--octra-text-primary) !important;
  color: black !important;
}

.bg-success {
  background-color: rgba(234, 186, 185, 0.6) !important;
  border: 1px solid #eabab9 !important;
  color: black !important;
}

.bg-highlight {
  background-color: var(--octra-accent-warning) !important;
  border: 1px solid var(--octra-accent-error) !important;
  color: black;
}

